--- a/zcgl/src/main/res/values/styles.xml
+++ b/zcgl/src/main/res/values/styles.xml
@@ -1,21 +1,15 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <!--返回或更多的按钮等图标颜色-->
-        <item name="colorControlNormal">?android:attr/textColorPrimaryInverse</item>
+    </style>
 
-        <!-- No ActionBar -->
+    <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <!-- 全屏显示界面-->
-        <item name="android:windowFullscreen">false</item>
-        <!-- 全屏显示-->
-        <item name="android:fitsSystemWindows">false</item>
     </style>
 
     <style name="FloatingActionButton">
