--- a/zcgl/src/main/res/layout/nav_header.xml
+++ b/zcgl/src/main/res/layout/nav_header.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/side_nav_bar"
-    android:orientation="vertical"
-    android:padding="@dimen/dimen_10"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@drawable/side_nav_bar"
+              android:gravity="bottom"
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/margin_vertical"
+              android:paddingLeft="@dimen/margin_horizontal"
+              android:paddingRight="@dimen/margin_horizontal"
+              android:paddingTop="@dimen/margin_vertical"
+              android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/dimen_10"
+        android:paddingTop="@dimen/margin_vertical"
         android:src="@mipmap/icon_logo"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/dimen_10"
-        android:text="@string/app_name"
+        android:paddingTop="@dimen/margin_vertical"
+        android:text="Android Studio"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kelin Hong"/>
+        android:text="android.studio@android.com"/>
 
 </LinearLayout>
