--- a/zcgl/src/main/res/layout/activity_main.xml
+++ b/zcgl/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
 
         </LinearLayout>
 
-        <include layout="@layout/nav_header"/>
+        <include layout="@layout/layout_nav"
+                 app:viewModel="@{viewModel}"/>
     </android.support.v4.widget.DrawerLayout>
 </layout>
