--- a/zcgl/src/main/res/layout/activity_login.xml
+++ b/zcgl/src/main/res/layout/activity_login.xml
@@ -11,50 +11,51 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:paddingTop="50dp">
 
         <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
-                   android:layout_marginTop="70dp"
                    android:src="@mipmap/logo_gdzc"/>
 
-        <EditText
-            android:id="@+id/et_username"
-            style="@style/CommonText"
-            android:layout_marginTop="@dimen/margin_vertical"
-            android:background="@color/app_bg"
-            android:drawableLeft="@mipmap/icon_user"
-            android:drawablePadding="@dimen/dimen_10"
-            android:hint="@string/hint_username"
-            android:maxLines="1"
-            android:padding="@dimen/margin_horizontal"
-            android:text="@={viewModel.username}"/>
-
-        <View style="@style/DividerHorizontal"/>
-
-        <EditText
-            android:id="@+id/et_password"
-            style="@style/CommonText"
-            android:background="@color/app_bg"
-            android:drawableLeft="@mipmap/icon_pwd"
-            android:drawablePadding="@dimen/dimen_10"
-            android:hint="@string/hint_password"
-            android:imeActionLabel="登录"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:padding="@dimen/margin_horizontal"
-            android:text="@={viewModel.password}"/>
-
-        <TextView
-            android:layout_width="wrap_content"
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_marginTop="24dp">
+
+            <EditText
+                android:id="@+id/et_username"
+                style="@style/CommonBase"
+                android:hint="@string/hint_username"
+                android:maxLines="1"
+                android:text="@={viewModel.username}"
+                android:textColor="@color/white"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_vertical">
+            <EditText
+                android:id="@+id/et_password"
+                style="@style/CommonBase"
+                android:hint="@string/hint_password"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:text="@={viewModel.password}"
+                android:textColor="@color/white"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.v7.widget.AppCompatButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_vertical"
+            android:padding="12dp"
             android:text="登录"
             android:textColor="@color/white"
-            android:textSize="@dimen/subheading"
             app:clickCommand="@{viewModel.loginCommand}"/>
 
     </LinearLayout>
