--- a/zcgl/src/main/res/layout/app_bar.xml
+++ b/zcgl/src/main/res/layout/app_bar.xml
@@ -24,6 +24,8 @@
             <TextView
                 android:id="@+id/tv_title"
                 style="@style/CommonButton"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center"
                 android:text="@{appbar.title}"
                 android:textSize="@dimen/subheading"
                 android:visibility="@{appbar.title!=null?View.VISIBLE : View.GONE}"/>
