--- a/zcgl/src/main/res/layout/layout_nav.xml
+++ b/zcgl/src/main/res/layout/layout_nav.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@drawable/side_nav_bar"
+        android:clickable="true"
         android:fitsSystemWindows="true"
         android:orientation="vertical"
         android:theme="@style/ThemeOverlay.AppCompat.Dark"
@@ -45,17 +46,22 @@
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:background="@color/app_bg"
-                      android:orientation="vertical">
-            <LinearLayout android:layout_width="match_parent"
-                          android:layout_height="wrap_content"
-                          android:padding="@dimen/dimen_10">
-                <TextView style="@style/IconText"
-                          android:text="@string/logout"/>
-                <TextView style="@style/CommonText"
-                          android:text="退出登录"
-                          app:clickCommand="@{viewModel.logoutCommon}"/>
+                      android:orientation="vertical"
+                      android:padding="@dimen/margin_vertical">
+            <TextView
+                android:id="@+id/tv_home"
+                style="@style/CommonText"
+                android:layout_marginBottom="@dimen/margin_vertical"
+                android:drawableLeft="@mipmap/icon_home"
+                android:drawablePadding="@dimen/dimen_10"
+                android:text="首页"/>
+            <TextView
+                style="@style/CommonText"
+                android:drawableLeft="@mipmap/icon_logout"
+                android:drawablePadding="@dimen/dimen_10"
+                android:text="退出登录"
+                app:clickCommand="@{viewModel.logoutCommon}"/>
 
-            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
