--- a/zcgl/src/main/res/layout/app_bar.xml
+++ b/zcgl/src/main/res/layout/app_bar.xml
@@ -13,6 +13,7 @@
         app:elevation="1dp">
 
         <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:visibility="@{appbar.isShow}"
