--- a/zcgl/src/main/res/values/styles.xml
+++ b/zcgl/src/main/res/values/styles.xml
@@ -11,6 +11,14 @@
         <item name="colorControlHighlight">@color/white</item>
         <item name="android:textColorHint">@color/gray</item>
         <item name="colorButtonNormal">@color/colorPrimaryDark</item>
+        <item name="android:actionMenuTextColor">@color/white</item> <!--  敲定颜色-->
+        <item name="android:textSize">@dimen/body</item> <!--  搞掂字体大小-->
+    </style>
+
+    <style name="AppTheme.AppComEdit">
+        <item name="colorControlNormal">@color/gray</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="colorControlHighlight">@color/colorPrimary</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
