--- a/gdzc/src/main/res/layout/app_bar.xml
+++ b/gdzc/src/main/res/layout/app_bar.xml
@@ -3,7 +3,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="android.view.View"/>
         <variable name="appbar" type="com.gdzc.base.AppBar"/>
     </data>
     <android.support.design.widget.AppBarLayout
@@ -12,24 +11,7 @@
         android:elevation="1dp"
         app:elevation="1dp">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:visibility="@{appbar.title!=null?View.VISIBLE : View.GONE}"
-            app:naviCommand="@{appbar.naviCommon}"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:title=" "
-            app:toolbar_navigationIcon="@{appbar.navigation}">
-            <TextView
-                android:id="@+id/tv_title"
-                style="@style/CommonButton"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
-                android:text="@{appbar.title}"
-                android:textSize="@dimen/subheading"
-                android:visibility="@{appbar.title!=null?View.VISIBLE : View.GONE}"/>
-
-        </android.support.v7.widget.Toolbar>
+        <include layout="@layout/tool_bar"
+                 app:appbar="@{appbar}"/>
     </android.support.design.widget.AppBarLayout>
 </layout>
